# ITKv4-TheNextGeneration-Tutorial

Exercises/ITKOpenCVBridge/: CMakeLists.txt
Exercises/ITKOpenCVBridge/exercise1/: CMakeLists.txt
